[package]
name = "git-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "embed"
crate-type = ["cdylib"]

[features]
luajit = ["mlua/luajit"]

[dependencies]
mlua = {version = "0.6", features = ["luajit", "vendored", "module", "macros"]}
git2 = "0.13"
